--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -298,6 +298,24 @@ img.loaded {
 
 /* -------------------- Gift Card Section Start -------------------- */
 
+
+.img-container {
+  position: relative;
+  border-radius: 1rem;
+  overflow: hidden;
+}
+
+.discount-badge {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  color: #fff;
+  padding: 5px 10px;
+  font-weight: bold;
+  border-radius: 0.5rem;
+  font-size: 0.9rem;
+}
+
 .giftcard_section {
     height: auto;
 }
@@ -409,7 +427,7 @@ img.loaded {
 /* Image styling */
 .giftcard_section .img-container img,
 #carouselInner img {
-    height: 100%;
+    /* height: 100%;
     object-fit: cover;
     object-position: top;
     pointer-events: none;
@@ -417,7 +435,12 @@ img.loaded {
     aspect-ratio: 500/323;
     width: 100%;
     -webkit-user-drag: none;
-    transition: transform 0.3s ease;
+    transition: transform 0.3s ease; */
+    width: 100%;
+    height: auto;       /* Maintain natural height */
+    object-fit: contain; /* Ensures full image is visible */
+    object-position: center;
+    aspect-ratio: auto;
 }
 
 .giftcard_section .img-container:hover img {
